# music

./: .gitignore  .travis.yml  hie.yaml  index.html  music.cabal  readme.md  stack.yaml
app/: music.hs
example/: example-vivid.lhs  example.hs  example.md  tidal-example.hs  tidal.el
other/: examples.tidal  firstset.tidal  haddeo.tidal  juxrev2power.tidal  simple.tidal  start.scd  sweet.tidal  theheadmasterritual.mid  tidal.el
src/: Music.hs  VividEuterpea.lhs
test/: test.hs
