name: music
version: 0.0.1
synopsis:
  See readme.md
description:
  See readme.md for description.
category:
  project
homepage:
  https://github.com/tonyday567/music
license:
  BSD3
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day (c) 2017
build-type:
  Simple
cabal-version:
  >=1.14
extra-source-files:
  stack.yaml
library
  default-language:
    Haskell2010
  ghc-options:
  hs-source-dirs:      
    src
  exposed-modules:
    Music
  build-depends:
    base >= 4.7 && < 5,
    protolude,
    tidal,
    deepseq,
    containers,
    HCodecs
 
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

executable music-example
  default-language:
    Haskell2010
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
  hs-source-dirs:
    example
  main-is:
    example.hs
  build-depends:
    base >= 4.7 && < 5,
    music,
    protolude,
    tidal,
    HCodecs
  default-extensions:
    NoImplicitPrelude,
    UnicodeSyntax,
    BangPatterns,
    BinaryLiterals,
    DeriveFoldable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    DisambiguateRecordFields,
    EmptyCase,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTSyntax,
    InstanceSigs,
    KindSignatures,
    LambdaCase,
    MonadComprehensions,
    MultiParamTypeClasses,
    MultiWayIf,
    NegativeLiterals,
    OverloadedStrings,
    ParallelListComp,
    PartialTypeSignatures,
    PatternSynonyms,
    RankNTypes,
    RecordWildCards,
    RecursiveDo,
    ScopedTypeVariables,
    TupleSections,
    TypeFamilies,
    TypeOperators

source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/music
