cabal-version: 2.4
name: music
version: 0.0.1
synopsis:
  See readme.md
description:
  See readme.md for description.
category:
  project
homepage:
  https://github.com/tonyday567/music
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  Tony Day
maintainer:
  tonyday567@gmail.com
copyright:
  Tony Day (c) 2017
build-type:
  Simple
extra-source-files:
  stack.yaml
source-repository head
  type:
    git
  location:
    https://github.com/tonyday567/music

library
  default-language:
    Haskell2010
  hs-source-dirs:      
    src
  exposed-modules:
    Music
  build-depends:
    base >= 4.7 && < 5,
    numhask >= 0.6 && < 0.7,
    tidal >= 1.6 && < 1.7,
    deepseq,
    containers,
  default-extensions:
    NoImplicitPrelude
    NegativeLiterals
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints

executable music
  default-language:
    Haskell2010
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
  hs-source-dirs:
    app
  main-is:
    music.hs
  build-depends:
    base >= 4.7 && < 5,
    music,
    numhask >= 0.6 && < 0.7,
    tidal >= 1.6 && < 1.7,
  default-extensions:
    NoImplicitPrelude
    NegativeLiterals
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
